--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: rust
+rust:
+    - nightly
 sudo: false
+matrix:
+  include:
+    - rust: nightly
 script:
     - cargo build
     - cargo test
