--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,10 @@ documentation = "https://contain-rs.github.io/lru-cache/lru_cache"
 keywords = ["data-structures"]
 readme = "README.md"
 
+[features]
+heapsize_impl = ["heapsize", "linked-hash-map/heapsize_impl"]
+
 [dependencies]
-linked-hash-map = "0.3"
+linked-hash-map = "0.4.2"
+
+heapsize = { version = "0.3.9", optional = true }
